[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/enemy.gd" type="Script" id=1]
[ext_resource path="res://scenes/enemy_bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/img/enemy_saucer.png" type="Texture" id=3]
[ext_resource path="res://scenes/enemy_path.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/explosion.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/snd/laser1.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/snd/expl2.wav" type="AudioStream" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 28.5957

[sub_resource type="Animation" id=2]
resource_name = "flash"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("enemy_spr:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "rotation"
length = 3.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("enemy_spr:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="enemy" type="Area2D" groups=[
"enemies",
]]
script = ExtResource( 1 )
bullet = ExtResource( 2 )

[node name="enemy_spr" type="Sprite" parent="."]
rotation = 3.42808
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
hframes = 3
frame = 1

[node name="enemy_coll" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="enemy_path" parent="." instance=ExtResource( 4 )]

[node name="enemy_animation_player" type="AnimationPlayer" parent="."]
playback_speed = 1.5
anims/flash = SubResource( 2 )
anims/rotation = SubResource( 3 )

[node name="explosion" parent="." instance=ExtResource( 5 )]

[node name="gun_timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="enemy_shoot_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="enemy_explosion_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0
[connection signal="body_entered" from="." to="." method="_on_enemy_body_entered"]
[connection signal="animation_finished" from="explosion/explosion_animation" to="." method="_on_explosion_animation_animation_finished"]
[connection signal="timeout" from="gun_timer" to="." method="_on_gun_timer_timeout"]

[editable path="explosion"]
